# Market-Microstructure-

./: .gitignore  README.md  requirements.txt
project/: .gitignore  app.py  pyproject.toml
project/asset/: experiment_sets.py  hawkes_simulator.py  params.py  simulator.py
project/backtest/: engine.py
project/bot/: paper_trader.py
project/data/: crypto_lob_calibration.ipynb  crypto_lob_data_V0.ipynb  crypto_lob_tardis.ipynb  download_binance.py  lobster_calibration.ipynb  real_data_pipeline.ipynb  sample_data.py
project/extensions/: 10_rl_market_making.ipynb  Notebook12_Extended_Guéant_with_RL.ipynb  RL_MM_prometteur.ipynb  __init__.py
project/figures/: table09_metrics_baseline.csv  table09_metrics_baseline_exponential.csv  table09_metrics_baseline_logistic.csv  table09_metrics_baseline_power_law.csv  table09_metrics_high_volatility.csv  table09_static_intensity_comparison_baseline.csv  table09_tests_baseline.csv  table09_tests_baseline_exponential.csv  table09_tests_baseline_logistic.csv  table09_tests_baseline_power_law.csv  table09_tests_high_volatility.csv
project/market_making.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project/notebooks/: 01_single_asset.ipynb  02_closed_form.ipynb  02_closed_form.py  03_model_a_vs_b.ipynb  04_multi_asset.ipynb  04_multi_asset.py  05_monte_carlo.ipynb  06_compare_hawkes_vs_poisson.ipynb  06_solver_diagnostics.py  07_intraday_regime_adaptation.ipynb  07_intraday_regime_adaptation.py  07_paper_extensions.ipynb  08_counterfactual_shadow_policy.ipynb  08_counterfactual_shadow_policy.py  (+12 more)
(+74 files in other folders)
